
Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]


==Bug Fixes==

[#494] looses localIRODSTransfer data on final update
[#496] BAD_INPUT_DESC_INDEX errors are being sent to irods client
[#502] bug in synch
[#519] tolerate quote in data name for acl query

==Features==

[#483] pool to share single conn - initial implementation of commons-pool to share a single connection from multiple threads
[#499] add thumbnail generation facility to Jargon data utls
[#500] enhanced 3.0 rule parsing and load rule from resource
[#515] add irods file factory support for uri file create without user info
[#114] support for mounted collections, cross zone browsing, and soft links
 	* Added support for obj stat, initial ObjStat domain object [work in progress]
 	* Added cross zone query capability and tests
[#533] consolidate and simplfy move methods in DataTransferOperations
[#536] User group CRUD functionality and tests

 
 ---------------------
 notepad - ignore and clear from notes at release
 ---------------------
 
 
 
 bug in get cross zone:
 
 288760 [main] INFO  org.irods.jargon.core.pub.IRODSGenQueryExecutorImpl  - rows returned from iRODS for GenQuery: 1
298850 [main] INFO  org.irods.jargon.core.pub.DataObjectAOImpl  - testing file length to set parallel transfer options
306090 [main] INFO  org.irods.jargon.core.pub.DataObjectAOImpl  - target local file: /Users/mikeconway/temp/irodsscratch/FederatedDataTransferOperationsImplTest/testGetCollectionWithTwoFilesInAnotherZoneReturnedLocalFiles/testGetCollectionWithTwoFilesInAnotherZone/testGetCollectionWithTwoFilesInAnotherZonelvl1nbr0/testGetCollectionWithTwoFilesInAnotherZone0.txt