@@ -1,0 +1,4 @@
+ListAvailableMS||msiListEnabledMS(*KVPairs)##writeKeyValPairs(stdout,*KVPairs,
+\": \")|nop
+*A=hello
+ruleExecOut
