@@ -44,6 +44,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 [#496] BAD_INPUT_DESC_INDEX errors are being sent to irods client
 [#502] bug in synch
 [#519] tolerate quote in data name for acl query
+[#547] error running old style rule via irods file
+
 
 ==Features==
 
@@ -56,6 +58,7 @@ Note that the following bug and feature requests are logged in GForge with relat
  	* Added cross zone query capability and tests
 [#533] consolidate and simplfy move methods in DataTransferOperations
 [#536] User group CRUD functionality and tests
+
 
  
  ---------------------
